tests/snapshots/tokenize__float_int_convert.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nint at 3:5\nIdentifier(i) at 3:9\n= at 3:11\nIntLiteral(42) at 3:13\n; at 3:15\ndouble at 4:5\nIdentifier(d) at 4:12\n= at 4:14\nIdentifier(i) at 4:16\n; at 4:17\ndouble at 6:5\nIdentifier(pi) at 6:12\n= at 6:15\nFloatLiteral(3.14) at 6:17\n; at 6:21\nint at 7:5\nIdentifier(truncated) at 7:9\n= at 7:19\nIdentifier(pi) at 7:21\n; at 7:23\nreturn at 9:5\nIntLiteral(0) at 9:12\n; at 9:13\n} at 10:1\nEOF at 11:1\n"
stderr: ""
status: 0
