tests/snapshots/tokenize__float_literal.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nfloat at 3:5\nIdentifier(x) at 3:11\n= at 3:13\nFloatLiteral(3.14) at 3:15\n; at 3:20\nreturn at 4:5\nIntLiteral(0) at 4:12\n; at 4:13\n} at 5:1\nEOF at 6:1\n"
stderr: ""
status: 0
