tests/snapshots/tokenize__float_multiply.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\ndouble at 3:5\nIdentifier(x) at 3:12\n= at 3:14\nFloatLiteral(2.5, None) at 3:16\n; at 3:19\ndouble at 4:5\nIdentifier(y) at 4:12\n= at 4:14\nFloatLiteral(4, None) at 4:16\n; at 4:19\ndouble at 5:5\nIdentifier(z) at 5:12\n= at 5:14\nIdentifier(x) at 5:16\n* at 5:18\nIdentifier(y) at 5:20\n; at 5:21\nreturn at 6:5\nIntLiteral(0, None) at 6:12\n; at 6:13\n} at 7:1\nEOF at 8:1\n"
stderr: ""
status: 0
