tests/snapshots/tokenize__float_ops.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\ndouble at 3:5\nIdentifier(a) at 3:12\n= at 3:14\nFloatLiteral(10) at 3:16\n; at 3:20\ndouble at 4:5\nIdentifier(b) at 4:12\n= at 4:14\nFloatLiteral(3) at 4:16\n; at 4:19\ndouble at 5:5\nIdentifier(sum) at 5:12\n= at 5:16\nIdentifier(a) at 5:18\n+ at 5:20\nIdentifier(b) at 5:22\n; at 5:23\ndouble at 6:5\nIdentifier(diff) at 6:12\n= at 6:17\nIdentifier(a) at 6:19\n- at 6:21\nIdentifier(b) at 6:23\n; at 6:24\ndouble at 7:5\nIdentifier(prod) at 7:12\n= at 7:17\nIdentifier(a) at 7:19\n* at 7:21\nIdentifier(b) at 7:23\n; at 7:24\ndouble at 8:5\nIdentifier(quot) at 8:12\n= at 8:17\nIdentifier(a) at 8:19\n/ at 8:21\nIdentifier(b) at 8:23\n; at 8:24\nreturn at 9:5\nIntLiteral(0) at 9:12\n; at 9:13\n} at 10:1\nEOF at 11:1\n"
stderr: ""
status: 0
