tests/snapshots/tokenize__float_test.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 34:1\nIdentifier(main) at 34:5\n( at 34:9\n) at 34:10\n{ at 34:12\nif at 38:5\n( at 38:8\nIntLiteral(2, None) at 38:9\n!= at 38:11\nIntLiteral(2, None) at 38:14\n) at 38:15\nreturn at 38:17\nIntLiteral(1, None) at 38:24\n; at 38:25\nif at 41:5\n( at 41:8\nIntLiteral(6, None) at 41:9\n!= at 41:11\nIntLiteral(6, None) at 41:14\n) at 41:15\nreturn at 41:17\nIntLiteral(2, None) at 41:24\n; at 41:25\nif at 44:5\n( at 44:8\nIntLiteral(15, None) at 44:9\n!= at 44:12\nIntLiteral(15, None) at 44:15\n) at 44:17\nreturn at 44:19\nIntLiteral(3, None) at 44:26\n; at 44:27\ndouble at 47:5\nIdentifier(epsilon) at 47:12\n= at 47:20\nFloatLiteral(0.0000000000000002220446049250313, None) at 47:22\n; at 47:44\nif at 48:5\n( at 48:8\nIdentifier(epsilon) at 48:9\n> at 48:17\nFloatLiteral(0.0001, None) at 48:19\n) at 48:25\nreturn at 48:27\nIntLiteral(4, None) at 48:34\n; at 48:35\nif at 51:5\n( at 51:8\nFloatLiteral(179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000, None) at 51:9\n< at 51:33\nFloatLiteral(1, None) at 51:35\n) at 51:38\nreturn at 51:40\nIntLiteral(5, None) at 51:47\n; at 51:48\nif at 52:5\n( at 52:8\nFloatLiteral(340282346600000000000000000000000000000, Float) at 52:9\n< at 52:26\nFloatLiteral(1, None) at 52:28\n) at 52:31\nreturn at 52:33\nIntLiteral(6, None) at 52:40\n; at 52:41\nif at 55:5\n( at 55:8\nFloatLiteral(0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000022250738585072014, None) at 55:9\n> at 55:33\nFloatLiteral(1, None) at 55:35\n) at 55:38\nreturn at 55:40\nIntLiteral(7, None) at 55:47\n; at 55:48\nif at 56:5\n( at 56:8\nFloatLiteral(0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000022250738585072014, None) at 56:9\n< at 56:33\nFloatLiteral(0, None) at 56:35\n) at 56:38\nreturn at 56:40\nIntLiteral(8, None) at 56:47\n; at 56:48\nif at 59:5\n( at 59:8\nIntLiteral(1, None) at 59:9\n< at 59:11\nIntLiteral(0, None) at 59:13\n) at 59:14\nreturn at 59:16\nIntLiteral(9, None) at 59:23\n; at 59:24\nreturn at 61:5\nIntLiteral(0, None) at 61:12\n; at 61:13\n} at 62:1\nEOF at 63:1\n"
stderr: ""
status: 0
