tests/snapshots/tokenize__forward_declaration.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(add) at 1:5\n( at 1:8\nint at 1:9\nIdentifier(a) at 1:13\n, at 1:14\nint at 1:16\nIdentifier(b) at 1:20\n) at 1:21\n; at 1:22\nint at 3:1\nIdentifier(main) at 3:5\n( at 3:9\n) at 3:10\n{ at 3:12\nreturn at 4:5\nIdentifier(add) at 4:12\n( at 4:15\nIntLiteral(10, None) at 4:16\n, at 4:18\nIntLiteral(20, None) at 4:20\n) at 4:22\n; at 4:23\n} at 5:1\nint at 7:1\nIdentifier(add) at 7:5\n( at 7:8\nint at 7:9\nIdentifier(a) at 7:13\n, at 7:14\nint at 7:16\nIdentifier(b) at 7:20\n) at 7:21\n{ at 7:23\nreturn at 8:5\nIdentifier(a) at 8:12\n+ at 8:14\nIdentifier(b) at 8:16\n; at 8:17\n} at 9:1\nEOF at 10:1\n"
stderr: ""
status: 0
