tests/snapshots/tokenize__forward_multiple.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(add) at 1:5\n( at 1:8\nint at 1:9\nIdentifier(a) at 1:13\n, at 1:14\nint at 1:16\nIdentifier(b) at 1:20\n) at 1:21\n; at 1:22\nint at 2:1\nIdentifier(multiply) at 2:5\n( at 2:13\nint at 2:14\nIdentifier(a) at 2:18\n, at 2:19\nint at 2:21\nIdentifier(b) at 2:25\n) at 2:26\n; at 2:27\nint at 3:1\nIdentifier(subtract) at 3:5\n( at 3:13\nint at 3:14\nIdentifier(a) at 3:18\n, at 3:19\nint at 3:21\nIdentifier(b) at 3:25\n) at 3:26\n; at 3:27\nint at 5:1\nIdentifier(main) at 5:5\n( at 5:9\n) at 5:10\n{ at 5:12\nint at 6:5\nIdentifier(x) at 6:9\n= at 6:11\nIdentifier(add) at 6:13\n( at 6:16\nIntLiteral(5, None) at 6:17\n, at 6:18\nIntLiteral(3, None) at 6:20\n) at 6:21\n; at 6:22\nint at 7:5\nIdentifier(y) at 7:9\n= at 7:11\nIdentifier(multiply) at 7:13\n( at 7:21\nIntLiteral(4, None) at 7:22\n, at 7:23\nIntLiteral(2, None) at 7:25\n) at 7:26\n; at 7:27\nint at 8:5\nIdentifier(z) at 8:9\n= at 8:11\nIdentifier(subtract) at 8:13\n( at 8:21\nIntLiteral(10, None) at 8:22\n, at 8:24\nIntLiteral(3, None) at 8:26\n) at 8:27\n; at 8:28\nreturn at 9:5\nIdentifier(x) at 9:12\n+ at 9:14\nIdentifier(y) at 9:16\n+ at 9:18\nIdentifier(z) at 9:20\n; at 9:21\n} at 10:1\nint at 12:1\nIdentifier(add) at 12:5\n( at 12:8\nint at 12:9\nIdentifier(a) at 12:13\n, at 12:14\nint at 12:16\nIdentifier(b) at 12:20\n) at 12:21\n{ at 12:23\nreturn at 13:5\nIdentifier(a) at 13:12\n+ at 13:14\nIdentifier(b) at 13:16\n; at 13:17\n} at 14:1\nint at 16:1\nIdentifier(multiply) at 16:5\n( at 16:13\nint at 16:14\nIdentifier(a) at 16:18\n, at 16:19\nint at 16:21\nIdentifier(b) at 16:25\n) at 16:26\n{ at 16:28\nreturn at 17:5\nIdentifier(a) at 17:12\n* at 17:14\nIdentifier(b) at 17:16\n; at 17:17\n} at 18:1\nint at 20:1\nIdentifier(subtract) at 20:5\n( at 20:13\nint at 20:14\nIdentifier(a) at 20:18\n, at 20:19\nint at 20:21\nIdentifier(b) at 20:25\n) at 20:26\n{ at 20:28\nreturn at 21:5\nIdentifier(a) at 21:12\n- at 21:14\nIdentifier(b) at 21:16\n; at 21:17\n} at 22:1\nEOF at 23:1\n"
stderr: ""
status: 0
