tests/snapshots/tokenize__function_call.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int\nIdentifier(add)\n(\nint\nIdentifier(a)\n,\nint\nIdentifier(b)\n)\n{\nreturn\nIdentifier(a)\n+\nIdentifier(b)\n;\n}\nint\nIdentifier(main)\n(\n)\n{\nreturn\nIdentifier(add)\n(\nIntLiteral(5)\n,\nIntLiteral(7)\n)\n;\n}\nEOF\n"
stderr: ""
status: 0
