tests/snapshots/tokenize__function_pointer.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(add) at 2:5\n( at 2:8\nint at 2:9\nIdentifier(a) at 2:13\n, at 2:14\nint at 2:16\nIdentifier(b) at 2:20\n) at 2:21\n{ at 2:23\nreturn at 3:5\nIdentifier(a) at 3:12\n+ at 3:14\nIdentifier(b) at 3:16\n; at 3:17\n} at 4:1\nint at 6:1\nIdentifier(multiply) at 6:5\n( at 6:13\nint at 6:14\nIdentifier(a) at 6:18\n, at 6:19\nint at 6:21\nIdentifier(b) at 6:25\n) at 6:26\n{ at 6:28\nreturn at 7:5\nIdentifier(a) at 7:12\n* at 7:14\nIdentifier(b) at 7:16\n; at 7:17\n} at 8:1\nint at 10:1\nIdentifier(main) at 10:5\n( at 10:9\n) at 10:10\n{ at 10:12\nint at 13:5\nIdentifier(result1) at 13:9\n= at 13:17\n( at 13:19\n* at 13:20\n& at 13:21\nIdentifier(add) at 13:22\n) at 13:25\n( at 13:26\nIntLiteral(3, None) at 13:27\n, at 13:28\nIntLiteral(4, None) at 13:30\n) at 13:31\n; at 13:32\nint at 14:5\nIdentifier(result2) at 14:9\n= at 14:17\n( at 14:19\n* at 14:20\n& at 14:21\nIdentifier(multiply) at 14:22\n) at 14:30\n( at 14:31\nIntLiteral(5, None) at 14:32\n, at 14:33\nIntLiteral(6, None) at 14:35\n) at 14:36\n; at 14:37\nreturn at 16:5\nIntLiteral(0, None) at 16:12\n; at 16:13\n} at 17:1\nEOF at 18:1\n"
stderr: ""
status: 0
