tests/snapshots/tokenize__function_pointer_decl.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(add) at 1:5\n( at 1:8\nint at 1:9\nIdentifier(a) at 1:13\n, at 1:14\nint at 1:16\nIdentifier(b) at 1:20\n) at 1:21\n{ at 1:23\nreturn at 2:5\nIdentifier(a) at 2:12\n+ at 2:14\nIdentifier(b) at 2:16\n; at 2:17\n} at 3:1\nint at 5:1\nIdentifier(sub) at 5:5\n( at 5:8\nint at 5:9\nIdentifier(a) at 5:13\n, at 5:14\nint at 5:16\nIdentifier(b) at 5:20\n) at 5:21\n{ at 5:23\nreturn at 6:5\nIdentifier(a) at 6:12\n- at 6:14\nIdentifier(b) at 6:16\n; at 6:17\n} at 7:1\nint at 9:1\nIdentifier(main) at 9:5\n( at 9:9\n) at 9:10\n{ at 9:12\nint at 10:5\n( at 10:9\n* at 10:10\nIdentifier(op) at 10:11\n) at 10:13\n( at 10:14\nint at 10:15\n, at 10:18\nint at 10:20\n) at 10:23\n= at 10:25\n& at 10:27\nIdentifier(add) at 10:28\n; at 10:31\nif at 12:5\n( at 12:8\n( at 12:9\n* at 12:10\nIdentifier(op) at 12:11\n) at 12:13\n( at 12:14\nIntLiteral(3, None) at 12:15\n, at 12:16\nIntLiteral(4, None) at 12:18\n) at 12:19\n!= at 12:21\nIntLiteral(7, None) at 12:24\n) at 12:25\n{ at 12:27\nreturn at 13:9\nIntLiteral(1, None) at 13:16\n; at 13:17\n} at 14:5\nIdentifier(op) at 16:5\n= at 16:8\n& at 16:10\nIdentifier(sub) at 16:11\n; at 16:14\nif at 17:5\n( at 17:8\n( at 17:9\n* at 17:10\nIdentifier(op) at 17:11\n) at 17:13\n( at 17:14\nIntLiteral(10, None) at 17:15\n, at 17:17\nIntLiteral(4, None) at 17:19\n) at 17:20\n!= at 17:22\nIntLiteral(6, None) at 17:25\n) at 17:26\n{ at 17:28\nreturn at 18:9\nIntLiteral(1, None) at 18:16\n; at 18:17\n} at 19:5\nreturn at 21:5\nIntLiteral(0, None) at 21:12\n; at 21:13\n} at 22:1\nEOF at 23:1\n"
stderr: ""
status: 0
